fixed subtext alignment in #home

--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ header a {
  */
 
 .profile {
-	
+	text-align: center;
 }
 
 .my-name {
